[package]
name = "stm32f446ret_blinky"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
stm32f4xx-hal = { version = "0.20", features = ["stm32f446"] }
panic-halt = "0.2"

[profile.release]
codegen-units = 1
debug = false
lto = true

[[bin]]
name = "blinky"
path = "src/main.rs"
test = false
bench = false